Update content and add zopim.

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="#about">About</a></li>
 						<li><a href="#skills">Skills</a></li>
-						<li><a href="#career">Career</a></li>
 						<li><a href="#projects">Projects</a></li>
+						<li><a href="#career">Career</a></li>
 						<li><a href="#education">Education</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
@@ -93,225 +93,287 @@
 
 		<!-- jumbotron ================================================== -->
 		<div class="jumbotron">
-			<div class="container text-center">
-				<img src="images/avatar.jpg" class="img-circle img-thumbnail" alt="Vincent Chen" width="120">
-				<h1>Hi, I'm Li-Hsuan Chen</h1>
-				<p>
-					I'm playing with Objective-C, PHP, F2E and more.
-				</p>
-				<p>
-					<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse" target="_blank"><i class="fa fa-arrow-down"></i> Download Resume</a>
-				</p>
+			<div class="container">
+				<div class="row">
+					<div  class="col-xs-12 col-sm-12 col-md-3 pull-right text-center">
+						<img src="images/avatar.jpg" class="img-thumbnail" alt="Vincent Chen" width="120">
+					</div>
+					<div  class="col-xs-12 col-sm-12 col-md-9 pull-left">
+						<h1>Hi, I'm Li-Hsuan Chen</h1>
+						<p>
+							I'm playing with Objective-C, Rails and <a href="#skills">more</a>.
+						</p>
+						<p>
+							<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse" target="_blank"><i class="fa fa-arrow-down"></i> Download Resume</a>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		<!-- Main ================================================== -->
 		
 		<div class="container main">
-			<h2 id="about">About Me</h2>
-			<div class="container about">
-				<div class="row">
-					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-center">
-						<span class="about-lv">Lv. 26</span>
-					</div>
-					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<span class="about-hp">HP</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width: 97%">
-									<span class="sr-only">97% Complete</span>
+			<div class="row">
+				<h2 id="about">About Me</h2>
+				<div class="about">
+					<div class="row">
+						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-center">
+							<span class="about-lv">Lv. 26</span>
+						</div>
+						<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<span class="about-hp">HP</span>
+								<div class="progress">
+									<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width: 97%">
+										<span class="sr-only">97% Complete</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<span class="about-mp">MP</span>
+								<div class="progress">
+									<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%">
+										<span class="sr-only">99% Complete</span>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<span class="about-mp">MP</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%">
-									<span class="sr-only">99% Complete</span>
-								</div>
+					<div class="row">
+						<h3>Who am I</h3>
+						<div class="col-md-12">
+							I'm Li-Hsuan Chen (陳澧萱, or Vincent Chen), a software engineer who came from Taiwan (台灣). I am a user-care engineer, creating workable products is not enough for me, but creating fun, well designed and enjoyable products do.
+						</div>
+					</div>
+					<div class="row">
+						<h3>What I Do</h3>
+						<div class="col-md-12 text-center do">
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item box">
+								<i class="fa fa-mobile-phone do-icon"></i>
+								<hr/>
+								<h4>Mobile Apps</h4>
+								<p>I'm mainly developing iOS apps now, and creating libraries.</p>
+							</div>
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item box">
+								<i class="fa fa-globe do-icon"></i>
+								<hr/>
+								<h4>Web</h4>
+								<p>I'm developing web systems using Ruby on Rails. Familiar with MVC framework.</p>	
+							</div>
+							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item box">
+								<i class="fa fa-shield do-icon"></i>
+								<hr/>
+								<h4>Play</h4>
+								<p>Not only digging into world of codes, I also playing music (violin and piano), Diablo III (Oh, yaaa!), cycling, watching movies and playing mobile games.</p>
 							</div>
 						</div>
 					</div>
 				</div>
+				<h2 id="skills">Skills</h2>
 				<div class="row">
-					<h3>Who am I</h3>
+					<h3>Main <small>Ordered by familiarity.</small></h3>
+					<ul>
+						<li>Objective-C
+							<small>
+								<span class="badge">Static Library</span>
+								<span class="badge">CocoaPods</span>
+								<span class="badge">UI Engineer</span>
+							</small>
+						</li>
+						<li>HTML/CSS
+							<small>
+								<span class="badge">Bootstrap</span>
+								<span class="badge">Less</span>
+								<span class="badge">Sass</span>
+							</small>
+						</li>
+						<li>JavaScript 
+							<small>
+								<span class="badge">jQuery</span>
+								<span class="badge">AngularJS</span> 
+							</small>
+						</li>
+						<li>Ruby
+							<small>
+								<span class="badge">Rails</span>
+							</small>
+						</li>
+						<li>PHP
+							<small>
+								<span class="badge">CodeIgniter</span>
+							</small>
+						</li>
+					</ul>
 					<div class="container">
-						I'm Li-Hsuan Chen (陳澧萱, or Vincent Chen), a software engineer who came from Taiwan (台灣). I am a user-care engineer, creating workable products is not enough for me, but creating fun, well designed and enjoyable products do.
+						<p><small><span class="label label-warning">Now Studying</span> Swift</small></p>
+					</div>
+					<h3>Project Related <small>which enhancing my works.</small></h3>
+					<div class="container">
+						<p>Github flow, Agile development</p>
+						<p><small><span class="label label-warning">Now Studying</span> Growth hack</small></p>
+					</div>
+					<h3>Sidekicks <small>others in my blood.</small></h3>
+					<div class="container">
+						<p>UI/UX design, Illustrator, Photoshop</p>
 					</div>
 				</div>
+
+				<h2 id="projects">Projects</h2>
 				<div class="row">
-					<h3>What I Do</h3>
-					<div class="container text-center do">
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item">
-							<i class="fa fa-globe do-icon"></i>
-							<hr/>
-							<h4>Web</h4>
-							<p>I'm developing web systems using JavaScript, PHP and MySQL on LAMP server. Familiar with MVC framework.</p>	
-						</div>
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item">
-							<i class="fa fa-mobile-phone do-icon"></i>
-							<hr/>
-							<h4>Mobile Apps</h4>
-							<p>I'm mainly developing iOS apps now, and creating libraries.</p>
-						</div>
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 do-item">
-							<i class="fa fa-shield do-icon"></i>
-							<hr/>
-							<h4>Play</h4>
-							<p>Not only digging into world of codes, I also playing music (violin and piano), Diablo III (Oh, yaaa!), riding bikes, watching movies and playing some games on Facebook and phone.</p>
-						</div>
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+						<a href="https://itunes.apple.com/tw/app/2015tai-wan-guo-ji-ke-jia/id1007045514?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a>
+						<h4>iOS app - 2015 Taiwan International Festival of Hakka Culture</h4>
+						<p>
+							<small>
+								<span class="label label-default">Resbonsible</span> <i>App structure, UI engineer, LBS features development.</i>
+							</small><br>
+							<small class="text-muted">October, 2015</small>	
+						</p>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+						<a href="https://itunes.apple.com/tw/app/i-yun-dong/id1007054246?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a>
+						<h4>體委會 - iSport (i運動) iOS app</h4>
+						<p>
+							<small>
+								<span class="label label-default">Resbonsible</span> <i>New features development.</i>
+							</small><br>
+							<small class="text-muted">August, 2015</small>	
+						</p>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+						<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
+							<i class="fa fa-close"></i> &nbsp; <strong>Terminated</strong>
+						</a>
+						<h4>iOS app</h4>
+						<p>
+							<small>
+								An app to let users to resolve missions and get awards.  <br>
+								<span class="label label-default">Resbonsible</span> <i>iOS app development, iOS UI engineering, iOS API with inhouse web service.</i>
+							</small><br>
+							<small class="text-muted">May, 2015</small>	
+						</p>
+					</div>
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+						<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
+							<i class="fa fa-close"></i> &nbsp; <strong>Terminated</strong>
+						</a>
+						<h4>Social Reading iOS app</h4>
+						<p>
+							<small>
+								An app to let users to share their reading experience of books, to schedule book clubs. <br>
+								<span class="label label-default">Resbonsible</span> <i>Product planing, iOS app development, UX.</i>
+							</small><br>
+							<small class="text-muted">May, 2015</small>	
+						</p>
 					</div>
 				</div>
-			</div>
-
-			<h2 id="skills">Skills</h2>
-			<div class="container">
-				<h3> <small>Ordered by familiarity.</small></h3>
-				<ul>
-					<li>Objective-C
-						<small>
-							<span class="badge">Static Library</span>
-							<span class="badge">CocoaPods</span>
-							<span class="badge">UI Engineer</span>
-						</small>
-					</li>
-					<li>HTML/CSS
-						<small>
-							<span class="badge">Bootstrap</span>
-							<span class="badge">Less</span>
-							<span class="badge">Sass</span>
-						</small>
-					</li>
-					<li>JavaScript 
-						<small>
-							<span class="badge">AngularJS</span> 
-							<span class="badge">jQuery</span>
-						</small>
-					</li>
-					<li>PHP
-						<small>
-							<span class="badge">CodeIgniter</span>
-						</small>
-					</li>
-					<li>Ruby
-						<small>
-							<span class="badge">Rails</span>
-						</small>
-					</li>
-				</ul>
-				<h3>Project Related <small>which enhancing my works.</small></h3>
-				<div class="container">
-					<p>Github flow, scrum, agile development</p>
-				</div>
-				<h3>Sidekicks <small>others in my blood.</small></h3>
-				<div class="container">
-					<p>Illustrator, Photoshop, UI/UX design</p>
-				</div>
-			</div>
-			
-			<h2 id="career">Career</h2>
-			<div class="container">
-				<ul>
-					<li><span class="label label-primary">2014 -</span> <strong>iOS Engineer</strong> <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
-					<li><span class="label label-primary">2013 - 2014</span> <strong>Mobile Software Engineer</strong> <i>Efwuhn, Inc., Taiwan</i></li>
-					<li><span class="label label-primary">2013</span> <strong>Chief Development Officer of iOS</strong> <i>Ans Global Corporation, Taiwan</i></li>
-				</ul>
-			</div>	
-
-			<h2 id="projects">Projects</h2>
-			<div class="container">
+				<hr>
 				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 						<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
 							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
-						</a><br>
-						<h3>PHPConf Taiwan 2014 iOS app</h3>
+						</a>
+						<h4>PHPConf Taiwan 2014 iOS app</h4>
 						<p>
 							<small>The official app for PHPConf Taiwan 2014.</small><br>
 							<small class="text-muted">October, 2014</small>	
 						</p>
 					</div>
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 						<a href="https://itunes.apple.com/us/app/tallyup-for-costco/id932235451?mt=8" class="btn btn-default btn-sm" target="_blank">
 							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
-						</a><br>
-						<h3>Tallyup for Costco</h3>
+						</a>
+						<h4>Tallyup for Costco</h4>
 						<p>
 							<small>An 3rd party shopping assistant app for Costco.</small><br>
 							<small class="text-muted">2013 ~ 2014</small>	
 						</p>
 					</div>
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 						<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
 							<i class="fa fa-github-alt"></i> &nbsp;<small>GitHub</small> <strong>Opensource</strong>
-						</a><br>
-						<h3>KPSDK for iOS</h3>
+						</a>
+						<h4>KPSDK for iOS</h4>
 						<p>
 							<small>An open source iOS SDK for the Taipei City mayoral candidate 柯文哲's open data API.</small><br>
 							<small class="text-muted">December, 2014</small>	
 						</p>
 					</div>
-				</div><hr>
-				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 						<a href="https://itunes.apple.com/us/app/plus-simple-counter/id666613910?mt=8" class="btn btn-default btn-sm" target="_blank">
 							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
-						</a><br>
-						<h3>Plus</h3>
+						</a>
+						<h4>Plus</h4>
 						<p>
 							<small>A Simple counter.</small><br>
 							<small class="text-muted">June, 2013</small>
 						</p>
 					</div>
-					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				</div>
+				<hr>
+				<div class="row">
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 						<a href="https://itunes.apple.com/us/app/ipass-scanner/id607572666?mt=8" class="btn btn-default btn-sm" target="_blank">
 							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
-						</a><br>
-						<h3>iPASS Scanner</h3>
+						</a>
+						<h4>iPASS Scanner</h4>
 						<p>
 							<small>A scanner and members management app for the Passbook service iPASSbank.</small><br>
 							<small class="text-muted">June, 2013</small>
 						</p>
 					</div>
-				</div><hr>
-				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-						<iframe allowfullscreen src="http://www.youtube.com/embed/kE1VyPfPyjg" frameborder="0"></iframe>
-						<h3>Dot</h3>
+					<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+						<a href="https://www.youtube.com/watch?v=kE1VyPfPyjg" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-youtube-play"></i> &nbsp;<small>YouTube</small> <strong>Video</strong>
+						</a>
+						<h4>Dot</h4>
 						<h4 class="text-warning">First Prize</h4>
-						<p><small>育成 x APP 開發競賽 - 應用開發組 (iOS) <br/><span class="text-muted">(December, 2012)</span></small></p>
+						<p><small>育成 x APP 開發競賽 - 應用開發組 (iOS) <br/><span class="text-muted">December, 2012</span></small></p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<hr/>
-						<i class="fa fa-linkedin-square"></i> Please check out my <a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn Profile</a> for more information.
-					</div>
-				</div>
-			</div>
+				<hr>
+				<div class="container">
 
-			<h2 id="education">Education</h2>
-			<div class="container">
-				<ul>
-					<li>
-						<span class="label label-primary">2011 - 2012</span>
-						<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
-						<p>
-							Graduate Intitute of Information Management.
-						</p>
-					</li>
-					<li>
-						<span class="label label-primary">2007 - 2011</span>
-						<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
-						<p>
-							<strong>Bachelor of Business Administration</strong>, Department of Information Management.
-						</p>
-					</li>
-				</ul>
+					<span class="fa fa-linkedin-square"></span> Please check out my <a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn Profile</a> for more information.
+				</div>
+				
+				<h2 id="career">Career</h2>
+				<div class="row">
+					<ul>
+						<li><span class="label label-primary">2015 -</span> <strong>Freelancer</strong></li>
+						<li><span class="label label-primary">2014 - 2015</span> <strong>iOS Engineer</strong> - <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
+						<li><span class="label label-primary">2013 - 2014</span> <strong>Mobile Software Engineer</strong> - <i>Efwuhn, Inc., Taiwan</i></li>
+						<li><span class="label label-primary">2013</span> <strong>Chief Development Officer of iOS</strong> - <i>Ans Global Corporation, Taiwan</i></li>
+					</ul>
+				</div>	
+
+				<h2 id="education">Education</h2>
+				<div class="row">
+					<ul>
+						<li>
+							<span class="label label-primary">2011 - 2012</span>
+							<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
+							<p>
+								Graduate Intitute of Information Management.
+							</p>
+						</li>
+						<li>
+							<span class="label label-primary">2007 - 2011</span>
+							<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
+							<p>
+								<strong>Bachelor of Business Administration</strong>, Department of Information Management.
+							</p>
+						</li>
+					</ul>
+				</div>
 			</div>
-			
 		</div>
 
 		<!-- Ribbon ================================================== -->
@@ -332,10 +394,10 @@
 			<div class="container text-center">
 				<p>Copyright © 2013-2015, Li Hsuan Chen</p>
 				<p>
-					<i class="fa fa-envelope-o mute"></i> &nbsp;vincent(a)vincenttt.com</a>
+					<i class="fa fa-envelope-o mute"></i> &nbsp;vincent(at)vincenttt.com</a>
 				</p>
 				<p>
-					<span class="label label-default">v 3.0</span>
+					<span class="label label-default">v 3.1</span>
 				</p>
 				<p>
 					Built with <i class="fa fa-heart love"></i> of 
@@ -359,6 +421,9 @@
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 		<!-- GA -->
 		<script src="scripts/ga.js"></script>
+		<script src="scripts/scripts.js"></script>
 
+		<!-- Zopim -->
+		<script src="scripts/zopim.js"></script>
 	</body>
 </html>
