Add speaker deck

--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
 						<li><a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn</a></li>
 						<li><a href="http://qiita.com/vc7" target="_blank">Qiita</a></li>
 						<li><a href="http://pixiv.me/vince78718" target="_blank">Pixiv</a></li>
+						<li><a href="https://speakerdeck.com/vc7" target="_blank">Speaker Deck</a></li>
 					</ul>
 				</div>
 			</div>
