--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 								<div class="row">
 									<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-										<a class="btn btn-default btn-sm" target="_blank" href="">
+										<a class="btn btn-default btn-sm" target="_blank" href="https://itunes.apple.com/tw/app/ku-qiaocoture-yu-le-wang-lu/id979457010?mt=8">
 											<i class="fa fa-apple"></i> &nbsp; <small>App Store</small> Download
 										</a>
 										<h4>Coture 酷瞧 - iOS App</h4>
