--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 										</p>
 									</div>
 									<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-										<a href="https://itunes.apple.com/us/app/plus-simple-counter/id666613910?mt=8" class="btn btn-default btn-sm" target="_blank">
-											<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+										<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
+											<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
 										</a>
 										<h4>Plus</h4>
 										<p>
@@ -340,8 +340,8 @@
 								<hr>
 								<div class="row">
 									<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-										<a href="https://itunes.apple.com/us/app/ipass-scanner/id607572666?mt=8" class="btn btn-default btn-sm" target="_blank">
-											<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+										<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
+											<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
 										</a>
 										<h4>iPASS Scanner</h4>
 										<p>
