--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 						<h2 id="career">Career</h2>
 						<div class="row">
 							<ul>
-								<li><span class="label label-primary">2016 -</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
+								<li><span class="label label-primary">2016</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
 								<li><span class="label label-primary">Late 2015</span> <strong>Freelancer</strong></li>
 								<li><span class="label label-primary">2014 - 2015</span> <strong>iOS Engineer</strong> - <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
 								<li><span class="label label-primary">2013 - 2014</span> <strong>Mobile Software Engineer</strong> - <i>Efwuhn, Inc., Taiwan</i></li>
