--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 							<p>
 								<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse" target="_blank"><i class="fa fa-arrow-down"></i> Download Resume</a>
 							</p>
+							<p>
+								<a href="documents/resume_ja.pdf" class="resume_jp_download" target="_blank">履歴書 - 日本語</a>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -411,7 +414,7 @@
 			<!-- Footer ================================================== -->
 			<footer>
 				<div class="container text-center">
-					<p>Copyright © 2013-2016, Li Hsuan Chen</p>
+					<p>Copyright © 2013-2017, Li-Hsuan Chen</p>
 					<p>
 						<i class="fa fa-envelope-o mute"></i> &nbsp;vince78718 (at) gmail.com</a>
 					</p>
