Add ja resume's dowload event.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse" target="_blank"><i class="fa fa-arrow-down"></i> Download Resume</a>
 							</p>
 							<p>
-								<a href="documents/resume_ja.pdf" class="resume_jp_download" target="_blank">履歴書 - 日本語</a>
+								<a href="documents/resume_ja.pdf" id="resume_ja_download" class="resume_jp_download" target="_blank">履歴書 - 日本語</a>
 							</p>
 						</div>
 					</div>
