Add wantedly links.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="author" content="Li-Hsuan Chen">
 	<meta name="description" content="This is the resume site of Li-Hsuan Chen (陳澧萱). A software engineer who came from Taiwan (台灣).">
-	<meta name="keywords" content="Li-Hsuan Chen, 陳澧萱, 履歷, iOS, resume">
+	<meta name="keywords" content="Li-Hsuan Chen, 陳澧萱, 履歷, iOS, resume, チェン　リーシュエン">
 	<link rel="canonical" href="http://resume.vincenttt.com/">
 	<link href="images/favicon.png" rel="icon">
 
@@ -84,6 +84,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="https://github.com/vc7" target="_blank" title="GitHub"><i class="fa fa-github-alt"></i></a></li>
 							<li><a href="http://www.linkedin.com/in/vince7" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+							<li><a href="https://www.wantedly.com/users/17902039" target="_blank"> Wantedly</a></li>
 							<li><a href="http://qiita.com/vc7" target="_blank"> Qiita</a></li>
 						</ul>
 					</nav>
@@ -404,6 +405,7 @@
 						<li>Other Public Profiles</li>
 						<li><a href="https://github.com/vc7" target="_blank">Github</a></li>
 						<li><a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn</a></li>
+						<li><a href="https://www.wantedly.com/users/17902039" target="_blank">Wantedly</a></li>
 						<li><a href="http://qiita.com/vc7" target="_blank">Qiita</a></li>
 						<li><a href="http://pixiv.me/vince78718" target="_blank">Pixiv</a></li>
 						<li><a href="https://speakerdeck.com/vc7" target="_blank">Speaker Deck</a></li>
