Add community activities section.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 							<li><a href="#skills">Skills</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="#career">Career</a></li>
+							<li><a href="#community">Community</a></li>
 							<li><a href="#education">Education</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
@@ -381,7 +382,37 @@
 								<li><span class="label label-primary">Early 2013</span> <strong>Chief Development Officer of iOS</strong> - <i>Ans Global Corporation, Taiwan</i></li>
 							</ul>
 						</div>	
-
+						<h2 id="community">Community Activities</h2>
+							<h3>2007</h3>
+							<ul>
+								<li>
+									<strong><a href="https://shibuya-swift.connpass.com/event/47031/" target="_blank" title="Event page on Connpass">sibuya.swift #7</a></strong> - Merciless Refactoring &nbsp;<small><a href="https://speakerdeck.com/vc7/merciless-refactoring" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
+								</li>
+								<li>
+									<strong><a href="https://www.facebook.com/groups/238948643131478" target="_blank" titile="Facebook Group">線上 Swift 讀書會</a></strong> - Example, Test, Thought of Swift Protocol
+								</li>
+								<li>
+									<strong><a href="https://www.facebook.com/groups/238948643131478" target="_blank" titile="Facebook Group">線上 Swift 讀書會</a></strong> - History and Evolution of Loading on iOS
+								</li>
+							</ul>
+							<h3>2006</h3>
+							<ul>
+								<li>
+									<strong><a href="https://www.meetup.com/Swift-Taipei-User-Group/events/235210516/" title="Event Page on Meetup">Swift Meetup #15</a></strong> - Example, Test, Thought of Swift Protocol
+								</li>
+								<li>
+									<strong><a href="http://cocoaheads-taipei.kktix.cc/events/111016" title="Event Page on KKTIX">CocoaHeads Taipei #Nov.</a></strong> - Example, Test, Thought of Swift Protocol | Presentation &nbsp;<small><a href="https://speakerdeck.com/vc7/protocol-de-shi-li-ce-shi-he-xin-de" target="_blank" title="Presentation on Speaker Deck"><i class="fa fa-external-link"></i></a></small> | Sample Code &nbsp;<small><a href="https://github.com/vc7/protocolDemoSwift" target="_blank" title="Sample code on GitHub"><i class="fa fa-external-link"></i></a></small>
+								</li>
+							</ul>
+							<h3>2004</h3>
+							<ul>
+								<li>
+									<strong><a href="https://www.facebook.com/groups/iostw/" title="Facebook Group">iOS Dev Club</a></strong> - Introducing of Rake and using with iOS <small><a href="https://speakerdeck.com/vc7/2014-08-30-tang-zhu-gong-zuo-zhi-rake-ru-men-yu-ying-yong" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
+								</li>
+							</ul>
+						<div class="row">
+							
+						</div>
 						<h2 id="education">Education</h2>
 						<div class="row">
 							<ul>
