--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<li><a href="#skills">Skills</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="#career">Career</a></li>
-							<li><a href="#community">Community</a></li>
+							<li><a href="#talks">Talks</a></li>
 							<li><a href="#education">Education</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
@@ -382,8 +382,9 @@
 								<li><span class="label label-primary">Early 2013</span> <strong>Chief Development Officer of iOS</strong> - <i>Ans Global Corporation, Taiwan</i></li>
 							</ul>
 						</div>	
-						<h2 id="community">Community Activities</h2>
+						<h2 id="talks">Community Talks</h2>
 							<h3>2007</h3>
+							<h4>Jan.</h4>
 							<ul>
 								<li>
 									<strong><a href="https://shibuya-swift.connpass.com/event/47031/" target="_blank" title="Event page on Connpass">sibuya.swift #7</a></strong> - Merciless Refactoring &nbsp;<small><a href="https://speakerdeck.com/vc7/merciless-refactoring" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
@@ -396,6 +397,7 @@
 								</li>
 							</ul>
 							<h3>2006</h3>
+							<h4>Nov.</h4>
 							<ul>
 								<li>
 									<strong><a href="https://www.meetup.com/Swift-Taipei-User-Group/events/235210516/" title="Event Page on Meetup">Swift Meetup #15</a></strong> - Example, Test, Thought of Swift Protocol
@@ -405,6 +407,7 @@
 								</li>
 							</ul>
 							<h3>2004</h3>
+							<h4>Aug.</h4>
 							<ul>
 								<li>
 									<strong><a href="https://www.facebook.com/groups/iostw/" title="Facebook Group">iOS Dev Club</a></strong> - Introducing of Rake and using with iOS <small><a href="https://speakerdeck.com/vc7/2014-08-30-tang-zhu-gong-zuo-zhi-rake-ru-men-yu-ying-yong" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
