--- a/index.html
+++ b/index.html
@@ -375,7 +375,9 @@
 						<h2 id="career">Career</h2>
 						<div class="row">
 							<ul>
-								<li><span class="label label-primary">2016</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
+								<li><span class="label label-primary">2017</span> <strong>PAY 株式会社</strong> <i>- PAY, Inc., Japan</i></li>
+								<li><span class="label label-primary">2017</span> <strong>BASE 株式会社</strong> <i>- BASE, Inc., Japan</i></li>
+								<li><span class="label label-primary">2016 - 2017</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
 								<li><span class="label label-primary">Late 2015</span> <strong>Freelancer</strong></li>
 								<li><span class="label label-primary">2014 - 2015</span> <strong>iOS Engineer</strong> - <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
 								<li><span class="label label-primary">2013 - 2014</span> <strong>Mobile Software Engineer</strong> - <i>Efwuhn, Inc., Taiwan</i></li>
@@ -383,7 +385,7 @@
 							</ul>
 						</div>	
 						<h2 id="talks">Community Talks</h2>
-							<h3>2007</h3>
+							<h3>2017</h3>
 							<h4>Jan.</h4>
 							<ul>
 								<li>
@@ -396,7 +398,7 @@
 									<strong><a href="https://www.facebook.com/groups/238948643131478" target="_blank" titile="Facebook Group">線上 Swift 讀書會</a></strong> - History and Evolution of Loading on iOS
 								</li>
 							</ul>
-							<h3>2006</h3>
+							<h3>2016</h3>
 							<h4>Nov.</h4>
 							<ul>
 								<li>
@@ -406,7 +408,7 @@
 									<strong><a href="http://cocoaheads-taipei.kktix.cc/events/111016" title="Event Page on KKTIX">CocoaHeads Taipei #Nov.</a></strong> - Example, Test, Thought of Swift Protocol | Presentation &nbsp;<small><a href="https://speakerdeck.com/vc7/protocol-de-shi-li-ce-shi-he-xin-de" target="_blank" title="Presentation on Speaker Deck"><i class="fa fa-external-link"></i></a></small> | Sample Code &nbsp;<small><a href="https://github.com/vc7/protocolDemoSwift" target="_blank" title="Sample code on GitHub"><i class="fa fa-external-link"></i></a></small>
 								</li>
 							</ul>
-							<h3>2004</h3>
+							<h3>2014</h3>
 							<h4>Aug.</h4>
 							<ul>
 								<li>
@@ -450,7 +452,7 @@
 			<!-- Footer ================================================== -->
 			<footer>
 				<div class="container text-center">
-					<p>Copyright © 2013-2017, Li-Hsuan Chen</p>
+					<p>Copyright © 2013-2018, Li-Hsuan Chen</p>
 					<p>
 						<i class="fa fa-envelope-o mute"></i> &nbsp;vince78718 (at) gmail.com</a>
 					</p>
