--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="about">
 							<div class="row">
 								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-									<span class="about-lv">Lv. 28</span><br>
+									<span class="about-lv">Lv. 29</span><br>
 									<small>since 1989</small>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-12 col-lg-12">
@@ -182,6 +182,16 @@
 											<span class="badge">Messenging</span>
 										</small>
 									</li>
+									<li>React Native
+										<small>
+											<span class="badge">TypeScript</span>
+										</small>
+									</li>
+									<li>Android
+										<small>
+											<span class="badge">Kotlin</span>
+										</small>
+									</li>
 									<li>HTML/CSS - 
 										<small>
 											<span class="badge">Bootstrap</span>
@@ -191,18 +201,7 @@
 									</li>
 									<li>JavaScript -  
 										<small>
-											<span class="badge">jQuery</span>
-											<span class="badge">AngularJS</span> 
-										</small>
-									</li>
-									<li>Ruby - 
-										<small>
-											<span class="badge">Rails</span>
-										</small>
-									</li>
-									<li>PHP - 
-										<small>
-											<span class="badge">CodeIgniter</span>
+											<span class="badge">jQuery</span> 
 										</small>
 									</li>
 								</ul>
@@ -225,6 +224,27 @@
 						<br>
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="row">
+									<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+										<a class="btn btn-default btn-sm" target="_blank" href="https://itunes.apple.com/tw/app/ku-qiaocoture-yu-le-wang-lu/id979457010?mt=8">
+											<i class="fa fa-apple"></i> &nbsp; <small>App Store</small> Download
+										</a>
+										<h4>PAY ID - iOS, Android App</h4>
+										<p>
+											<small class="text-muted">April, 2017~</small>	
+										</p>
+										<p>
+											<small>
+												<span class="label label-default">Resbonsible</span> 
+											</small>
+										</p>
+										<ul>
+											<li>App development. </li>
+											<li>UX enhancement.</li>
+										</ul>
+									</div>
+								</div>
+								<hr>
 								<div class="row">
 									<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
 										<a class="btn btn-default btn-sm" target="_blank" href="https://itunes.apple.com/tw/app/ku-qiaocoture-yu-le-wang-lu/id979457010?mt=8">
@@ -385,6 +405,13 @@
 							</ul>
 						</div>	
 						<h2 id="talks">Community Talks</h2>
+							<h3>2018</h3>
+							<h4>Sept.</h4>
+							<ul>
+								<li>
+									<strong><a href="https://hikalab.connpass.com/event/97761/" target="_blank" title="Event page on Connpass">sibuya.swift #7</a></strong> - お支払いアプリ「PAY ID」のUX思想 &nbsp;<small><a href="https://speakerdeck.com/vc7/the-ux-thinking-of-pay-id" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
+								</li>
+							</ul>
 							<h3>2017</h3>
 							<h4>Jan.</h4>
 							<ul>
