--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 								<div class="row">
 									<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-										<a class="btn btn-default btn-sm" target="_blank" href="https://itunes.apple.com/tw/app/ku-qiaocoture-yu-le-wang-lu/id979457010?mt=8">
+										<a class="btn btn-default btn-sm" target="_blank" href="https://itunes.apple.com/jp/app/pay-id-%E3%81%8A%E6%94%AF%E6%89%95%E3%81%84%E3%82%A2%E3%83%97%E3%83%AA/id1143404977?mt=8">
 											<i class="fa fa-apple"></i> &nbsp; <small>App Store</small> Download
+										</a> &nbsp; 
+										<a class="btn btn-default btn-sm" target="_blank" href="https://play.google.com/store/apps/details?id=pay.jp.payid">
+											<i class="fa fa-android"></i> &nbsp; <small>Google Play</small> Download
 										</a>
 										<h4>PAY ID - iOS, Android App</h4>
 										<p>
