--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 							<h4>Sept.</h4>
 							<ul>
 								<li>
-									<strong><a href="https://hikalab.connpass.com/event/97761/" target="_blank" title="Event page on Connpass">sibuya.swift #7</a></strong> - お支払いアプリ「PAY ID」のUX思想 &nbsp;<small><a href="https://speakerdeck.com/vc7/the-ux-thinking-of-pay-id" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
+									<strong><a href="https://hikalab.connpass.com/event/97761/" target="_blank" title="Event page on Connpass">【Kyash、Coiney、PAY】新しい支払いの形を作る、モバイル決済サービスの開発の裏側とは</a></strong> - お支払いアプリ「PAY ID」のUX思想 &nbsp;<small><a href="https://speakerdeck.com/vc7/the-ux-thinking-of-pay-id" target="_blank" title="Open a new page to Speaker Deck"><i class="fa fa-external-link"></i></a></small>
 								</li>
 							</ul>
 							<h3>2017</h3>
