--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Resume | Li-Hsuan Chen</title>
+	<title>Resume | Lihsuan CHEN</title>
 	<meta charset="UTF-8">
 
-	<meta name="author" content="Li-Hsuan Chen">
-	<meta name="description" content="This is the resume site of Li-Hsuan Chen (陳澧萱). A software engineer who came from Taiwan (台灣).">
-	<meta name="keywords" content="Li-Hsuan Chen, 陳澧萱, 履歷, iOS, resume, チェン　リーシュエン">
+	<meta name="author" content="Lihsuan CHEN">
+	<meta name="description" content="This is the resume site of Lihsuan CHEN (陳澧萱). A software engineer who came from Taiwan (台灣).">
+	<meta name="keywords" content="Li-Hsuan Chen, Lihsuan CHEN, 陳澧萱, 履歷, iOS, resume, チェン　リーシュエン">
 	<link rel="canonical" href="http://resume.vincenttt.com/">
 	<link href="images/favicon.png" rel="icon">
 
@@ -25,7 +25,7 @@
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 			<!-- Open Graph Tags -->
-			<meta property="og:title" content="Resume | Li-Hsuan Chen">
+			<meta property="og:title" content="Resume | Lihsuan CHEN">
 			<meta property="og:type" content="website">
 			<meta property="og:url" content="http://resume.vincenttt.com/">
 
@@ -33,8 +33,8 @@
 			<meta property="fb:admins" content="1825815115">
 
 			<!-- Twitter Tags -->
-			<meta name="twitter:title" content="Resume | Li-Hsuan Chen">
-			<meta name="twitter:description" content="This is the resume site of Li-Hsuan Chen.">
+			<meta name="twitter:title" content="Resume | Lihsuan CHEN">
+			<meta name="twitter:description" content="This is the resume site of Lihsuan CHEN.">
 			<meta name="twitter:creator" content="@vince78718">
 
 			<!-- App CSS -->
@@ -71,7 +71,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">Li-Hsuan Chen</a>
+						<a class="navbar-brand" href="#">Lihsuan CHEN</a>
 					</div>
 					<nav class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
@@ -85,7 +85,6 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="https://github.com/vc7" target="_blank" title="GitHub"><i class="fa fa-github-alt"></i></a></li>
 							<li><a href="http://www.linkedin.com/in/vince7" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-							<li><a href="https://www.wantedly.com/users/17902039" target="_blank"> Wantedly</a></li>
 							<li><a href="http://qiita.com/vc7" target="_blank"> Qiita</a></li>
 						</ul>
 					</nav>
@@ -100,7 +99,7 @@
 							<img src="images/avatar.jpg" class="img-thumbnail" alt="Vincent Chen" width="120">
 						</div>
 						<div  class="col-xs-12 col-sm-12 col-md-9 pull-left">
-							<h1>Hi, I'm Li-Hsuan Chen</h1>
+							<h1>Hi, I'm Lihsuan CHEN</h1>
 							<p>
 								I'm playing with iOS, Rails and <a href="#skills">more</a>.
 							</p>
@@ -143,7 +142,7 @@
 								<div class="col-md-12">
 								<h3>Who am I</h3>
 								<p>
-									I'm Li-Hsuan Chen (陳澧萱), a software engineer who came from Taiwan (台灣).
+									I'm Lihsuan CHEN (陳澧萱), a software engineer who came from Taiwan (台灣).
 									</p>
 									<p>
 									I am a user-care engineer, creating workable products is not enough for me, but creating fun, well designed and enjoyable products do.
@@ -465,9 +464,7 @@
 						<li>Other Public Profiles</li>
 						<li><a href="https://github.com/vc7" target="_blank">Github</a></li>
 						<li><a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn</a></li>
-						<li><a href="https://www.wantedly.com/users/17902039" target="_blank">Wantedly</a></li>
 						<li><a href="http://qiita.com/vc7" target="_blank">Qiita</a></li>
-						<li><a href="http://pixiv.me/vince78718" target="_blank">Pixiv</a></li>
 						<li><a href="https://speakerdeck.com/vc7" target="_blank">Speaker Deck</a></li>
 					</ul>
 				</div>
@@ -476,7 +473,7 @@
 			<!-- Footer ================================================== -->
 			<footer>
 				<div class="container text-center">
-					<p>Copyright © 2013-2018, Li-Hsuan Chen</p>
+					<p>Copyright © 2013-2019, Lihsuan CHEN</p>
 					<p>
 						<i class="fa fa-envelope-o mute"></i> &nbsp;vince78718 (at) gmail.com</a>
 					</p>
