--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<meta name="keywords" content="Li-Hsuan Chen, Lihsuan CHEN, 陳澧萱, 履歷, iOS, resume, チェン　リーシュエン">
 	<link rel="canonical" href="http://resume.vincenttt.com/">
 	<link href="images/favicon.png" rel="icon">
-
+	
+	<meta name="google-site-verification" content="cMP8scAg3qZlj_pUkRda2wRum4p4RCFiC8HWylypCxk" />
+	
 	<!-- Apple Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
