--- a/index.html
+++ b/index.html
@@ -393,8 +393,7 @@
 						<h2 id="career">Career</h2>
 						<div class="row">
 							<ul>
-								<li><span class="label label-primary">2018</span> <strong>PAY 株式会社</strong> <i>- PAY, Inc., Japan</i></li>
-								<li><span class="label label-primary">2017</span> <strong>BASE 株式会社</strong> <i>- BASE, Inc., Japan</i></li>
+								<li><span class="label label-primary">2017 - </span> <strong>BASE 株式会社</strong> <i>- BASE, Inc., Japan</i></li>
 								<li><span class="label label-primary">2016 - 2017</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
 								<li><span class="label label-primary">Late 2015</span> <strong>Freelancer</strong></li>
 								<li><span class="label label-primary">2014 - 2015</span> <strong>iOS Engineer</strong> - <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
