--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 								<div class="col-md-12">
 								<h3>Languages</h3>
 								<p><strong>中文</strong> - Native</p>
-								<p><strong>English</strong> - Professional Fluent</p>
-								<p><strong>日本語</strong> - Intermediate</p>
+								<p><strong>English</strong> - Professional Fluent (TOEIC 860)</p>
+								<p><strong>日本語</strong> - Professional Fluent (JLPT N1)</p>
 								</div>
 							</div>
 						</div>
